--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,5 @@
 {
-  "extends": ["@remix-run/eslint-config", "@remix-run/eslint-config/node"]
+  "extends": ["standard",
+  "@remix-run/eslint-config",
+  "@remix-run/eslint-config/node"]
 }
