--- a/package.json
+++ b/package.json
@@ -6,20 +6,20 @@
     "dev": "remix dev"
   },
   "dependencies": {
-    "@remix-run/node": "^1.6.4",
-    "@remix-run/react": "^1.6.4",
-    "@remix-run/vercel": "^1.6.4",
-    "@vercel/node": "^1.15.2",
-    "nes.css": "^2.3.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "@remix-run/node": "1.6.4",
+    "@remix-run/react": "1.6.4",
+    "@remix-run/vercel": "1.6.4",
+    "@vercel/node": "1.15.2",
+    "nes.css": "2.3.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.6.4",
-    "@remix-run/eslint-config": "^1.6.4",
-    "@remix-run/serve": "^1.6.4",
-    "eslint": "^8.15.0",
-    "standard": "^17.0.0"
+    "@remix-run/dev": "1.6.4",
+    "@remix-run/eslint-config": "1.6.4",
+    "@remix-run/serve": "1.6.4",
+    "eslint": "8.15.0",
+    "standard": "17.0.0"
   },
   "engines": {
     "node": ">=14"
